Refactor #179 #180 #181 Correções relacionadas ao SonarQube.