@@ -3,12 +3,9 @@ package com.zerowaste.services.broadcasts;
 import org.springframework.stereotype.Service;
 import com.zerowaste.dtos.broadcasts.GetBroadcastDTO;
 import com.zerowaste.models.broadcast.BroadcastList;
-import com.zerowaste.models.product.Product;
 import com.zerowaste.repositories.BroadcastListsRepository;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class GetBroadcastListsService {
@@ -26,30 +23,18 @@ public class GetBroadcastListsService {
     
         List<String> emails = broadcastList.getBroadcastEmails().stream()
             .map(emailObj -> emailObj.getEmail())
-            .collect(Collectors.toList());
-
-        List<Long> productIds = (broadcastList.getProducts() != null) ? 
-            broadcastList.getProducts().stream()
-                .map(p -> (Product) p)
-                .map(Product::getId)
-                .collect(Collectors.toList()) :
-            new ArrayList<>();
+            .toList();
 
         return new GetBroadcastDTO(
             broadcastList.getId(),
             emails,
             broadcastList.getName(),
-            broadcastList.getDescription(),
             broadcastList.getSendType().name(),
             broadcastList.getCreatedAt(),
             broadcastList.getUpdatedAt(),
-            broadcastList.getDeletedAt(),
-            broadcastList.getBroadcastEmails().stream()
-                .map(emailObj -> emailObj.getId())
-                .collect(Collectors.toSet()),
-            productIds
+            broadcastList.getDeletedAt()
         );
-    }).collect(Collectors.toList());
+    }).toList();
     }
 
 }
